--- a/index.html
+++ b/index.html
@@ -86,10 +86,9 @@
 					  <p>Please Enter Your Name to Play!</p>
 						  <label for="userName_1">Player 1:</label>
 						  <input type="text" id="userName_1" value="Default">
-						  <button type="button" id="startGame">Start Game</button>
 						  <label for="userName_2">Player 2:</label>
 						  <input type="text" id="userName_2" value="Default">
-						  <button type="button" id="startGame">Start Game</button>
+						  <input id="btnPlayer1" type="button" value="START GAME" onclick ="return btn_Startonclick()"/> 
 					</div>
 				  </div>      
 		<h2>Round 1</h2>
