--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
     <div class="box"></div> <div class="box"></div>
     <div class="wall"></div> <div class="wall"></div>
     
-  <div class="player1total">Player 1</div>
+ <!-- <div class="player1total">Player 1</div>
 
-  <div class="player2total">Player 2</div>
+  <div class="player2total">Player 2</div> -->
     
   </div>
 
