--- a/index.html
+++ b/index.html
@@ -83,11 +83,10 @@
 					<div id="modalContent">
 					  <p>Please Enter Your Name to Play!</p>
 						  <label for="userName_1">Player 1:</label>
-						  <input type="text" id="userName_1" placeholder="Default">
-						  <th> Player 1 Round Score ($)</th>
+						  <input type="text" id="userName_1" placeholder="Default"> <br>
+						<label for="roundScore_1">Player 1:</label>
 						  <label for="userName_2">Player 2:</label>
 						  <input type="text" id="userName_2" placeholder="Default">
-						  <th> Player 2 Round Score ($)</th>
 						  <input id="btnPlayer1" type="button" value="START GAME" onclick ="return btn_Startonclick()"/> 
 					</div>
 				  </div>      
