--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					<div id="modalContent">
 					  <p>Please Enter Your Name to Play!</p>
 						  <label for="userName_1">Player 1:</label>
-						  <input type="text" id="userName_1" placeholder="Default"> <br>
+						  <input type="text" id="userName_1" placeholder="Default">
 						  <label for="userName_2">Player 2:</label>
 						  <input type="text" id="userName_2" placeholder="Default">
 						  <input id="btnPlayer1" type="button" value="START GAME" onclick ="return btn_Startonclick()"/> 
