--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 						  <label for="userName_1">Player 1:</label>
 						  <input type="text" id="userName_1" placeholder="Default">
 						  <label for="roundScore_1">P1 Score:</label>
-						  <input type="text" id="roundScore_1" placeholder="Default">
+						  <input type="text" id="roundScore_1" disabled>
 						  <label for="totalScore_1">P1 Total Score:</label>
-						  <input type="text" id="totalScore_1" placeholder="Default"> <br>
+						  <input type="text" id="totalScore_1" disabled> <br>
 						  <label for="userName_2">Player 2:</label>
 						  <input type="text" id="userName_2" placeholder="Default">
 						  <input id="btnPlayer1" type="button" value="START GAME" onclick ="return btn_Startonclick()"/> 
