--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
 						  <input type="text" id="totalScore_1" disabled> <br>
 						  <label for="userName_2">Player 2:</label>
 						  <input type="text" id="userName_2" placeholder="Default">
+						  <label for="roundScore_2">P1 Score:</label>
+						  <input type="text" id="roundScore_2" disabled>
+						  <label for="totalScore_2">P1 Total Score:</label>
+						  <input type="text" id="totalScore_2" disabled> <br>
 						  <input id="btnPlayer1" type="button" value="START GAME" onclick ="return btn_Startonclick()"/> 
 					</div>
 				  </div>      
