--- a/index.html
+++ b/index.html
@@ -17,39 +17,65 @@
   <div class = "game-board">
     <!--First Row-->
     <div class="wall"></div> <div class="wall"></div>
-    <div class="box"></div> <div class="box"></div> 
-    <div class="box"></div> <div class="box"></div>  
-    <div class="box"></div> <div class="box"></div>
-    <div class="box"></div> <div class="box"></div> 
-    <div class="box"></div> <div class="box"></div>
+    <div id = "box1" class="box"></div>
+	<div id = "box2" class="box"></div> 
+    <div id = "box3" class="box"></div> 
+	<div id = "box4" class="box"></div>  
+    <div id = "box5" class="box"></div> 
+	<div id = "box6" class="box"></div>
+    <div id = "box7" class="box"></div> 
+	<div id = "box8" class="box"></div> 
+    <div id = "box9" class="box"></div> 
+	<div id = "box10" class="box"></div>
     <div class="wall"></div> <div class="wall"></div>
 
     <!--Second Row-->
-    <div class="box"></div> <div class="box"></div>
-    <div class="box"></div> <div class="box"></div> 
-    <div class="box"></div> <div class="box"></div>  
-    <div class="box"></div> <div class="box"></div>
-    <div class="box"></div> <div class="box"></div> 
-    <div class="box"></div> <div class="box"></div>
-    <div class="box"></div> <div class="box"></div>
+    <div id = "box11" class="box"></div> 
+	<div id = "box12" class="box"></div>
+    <div id = "box13" class="box"></div> 
+	<div id = "box14" class="box"></div> 
+    <div id = "box15" class="box"></div> 
+	<div id = "box16" class="box"></div>  
+    <div id = "box17" class="box"></div> 
+	<div id = "box18" class="box"></div>
+    <div id = "box19" class="box"></div> 
+	<div id = "box20" class="box"></div> 
+    <div id = "box21" class="box"></div> 
+	<div id = "box22" class="box"></div>
+    <div id = "box23" class="box"></div> 
+	<div id = "box24" class="box"></div>
 
     <!--Third row-->
-    <div class="box"></div> <div class="box"></div>
-    <div class="box"></div> <div class="box"></div> 
-    <div class="box"></div> <div class="box"></div>  
-    <div class="box"></div> <div class="box"></div>
-    <div class="box"></div> <div class="box"></div> 
-    <div class="box"></div> <div class="box"></div>
-    <div class="box"></div> <div class="box"></div>
+    <div id = "box25" class="box"></div> 
+	<div id = "box26" class="box"></div>
+    <div id = "box27" class="box"></div> 
+	<div id = "box28" class="box"></div> 
+    <div id = "box29" class="box"></div> 
+	<div id = "box30" class="box"></div>  
+    <div id = "box31" class="box"></div> 
+	<div id = "box32" class="box"></div>
+    <div id = "box33" class="box"></div> 
+	<div id = "box34" class="box"></div> 
+    <div id = "box35" class="box"></div> 
+	<div id = "box36" class="box"></div>
+    <div id = "box37" class="box"></div> 
+	<div id = "box38" class="box"></div>
 
     <!--Fourth Row-->
-    <div class="wall"></div> <div class="wall"></div>
-    <div class="box"></div> <div class="box"></div> 
-    <div class="box"></div> <div class="box"></div>  
-    <div class="box"></div> <div class="box"></div>
-    <div class="box"></div> <div class="box"></div> 
-    <div class="box"></div> <div class="box"></div>
-    <div class="wall"></div> <div class="wall"></div>
+    <div class="wall"></div> 
+	<div class="wall"></div>
+    <div id = "box39" class="box"></div> 
+	<div id = "box40" class="box"></div> 
+    <div id = "box41" class="box"></div> 
+	<div id = "box42" class="box"></div>  
+    <div id = "box43" class="box"></div> 
+	<div id = "box44" class="box"></div>
+    <div id = "box45" class="box"></div> 
+	<div id = "box46" class="box"></div> 
+    <div id = "box47" class="box"></div> 
+	<div id = "box48" class="box"></div>
+    <div class="wall"></div> 
+	<div class="wall"></div>
     
  <!-- <div class="player1total">Player 1</div>
 
@@ -59,7 +85,18 @@
 
 		<h1>WHEEL OF FORTUNE!</h1>
 		<div id="scoreBoard">
-			
+			<table>
+			  <tr>
+				<th>Player Name</th>
+				<th>Round Score ($)</th>
+				<th>Total Score ($)</th>
+			  </tr>
+			  <tr>
+				<td id="player_1">Player 1</td>
+				<td id="roundScore_1">0</td>
+				<td id="totalScore_1">0</td>
+			  </tr>
+	
 			  <div id="buttonGroup">
 				<input type="text" id="txtGuess" placeholder="Enter guess"/>
 				<input id="btnBuyVowel" type="button" value="BUY VOWEL" disabled="true" onclick ="return btnBuyVowel_onclick()"/>
@@ -72,17 +109,9 @@
 					<div id="modalContent">
 					  <p>Please Enter Your Name to Play!</p>
 						  <label for="userName_1">Player 1:</label>
-						  <input type="text" id="userName_1" placeholder="Default">
-						  <label for="roundScore_1">P1 Score:</label>
-						  <input type="text" id="roundScore_1" disabled>
-						  <label for="totalScore_1">P1 Total Score:</label>
-						  <input type="text" id="totalScore_1" disabled> <br>
+						  <input type="text" id="userName_1" placeholder="Default"> <br>
 						  <label for="userName_2">Player 2:</label>
 						  <input type="text" id="userName_2" placeholder="Default">
-						  <label for="roundScore_2">P2 Score:</label>
-						  <input type="text" id="roundScore_2" disabled>
-						  <label for="totalScore_2">P2 Total Score:</label>
-						  <input type="text" id="totalScore_2" disabled> <br> <br> <br>
 						  <input id="btnPlayer1" type="button" value="START GAME" onclick ="return btn_Startonclick()"/> 
 					</div>
 				  </div>      
