--- a/index.html
+++ b/index.html
@@ -99,15 +99,15 @@
 						  <label for="userName_1">Player 1:</label>
 						  <input type="text" id="userName_1" placeholder="Default">
 						  <label for="roundScore_1">P1 Score:</label>
-						  <input type="text" id="roundScore_1" disabled>
+						  <input type="text" id="roundScore_1" readonly>
 						  <label for="totalScore_1">P1 Total Score:</label>
-						  <input type="text" id="totalScore_1" disabled> <br>
+						  <input type="text" id="totalScore_1" readonly> <br>
 						  <label for="userName_2">Player 2:</label>
 						  <input type="text" id="userName_2" placeholder="Default">
 						  <label for="roundScore_2">P2 Score:</label>
-						  <input type="text" id="roundScore_2" disabled>
+						  <input type="text" id="roundScore_2" readonly>
 						  <label for="totalScore_2">P2 Total Score:</label>
-						  <input type="text" id="totalScore_2" disabled> <br> <br> <br>
+						  <input type="text" id="totalScore_2" readonly> <br> <br> <br>
 						  <input id="btnPlayer1" type="button" value="START GAME" onclick ="return btn_Startonclick()"/> 
 					</div>
 				  </div>      
